# backend/utils/all_routes.py
@@ -28,6 +28,7 @@ class SPLASH_ROUTES:
 class URL_TAG_ROUTES:
     _URL_TAGS = "utub_url_tags."
     CREATE_URL_TAG = _URL_TAGS + "create_utub_url_tag"
+    BATCH_ADD_URL_TAGS = _URL_TAGS + "create_utub_url_tags"
     DELETE_URL_TAG = _URL_TAGS + "delete_utub_url_tag"
 
 
@@ -124,6 +125,9 @@ def generate_routes_js() -> dict[str, str]:
         # UTub URL Tag routes
         "createURLTag": url_for(
             URL_TAG_ROUTES.CREATE_URL_TAG, utub_id=-1, utub_url_id=-2
+        ),
+        "createURLTagsBatch": url_for(
+            URL_TAG_ROUTES.BATCH_ADD_URL_TAGS, utub_id=-1, utub_url_id=-2
         ),
         "deleteURLTag": url_for(
             URL_TAG_ROUTES.DELETE_URL_TAG, utub_id=-1, utub_url_id=-2, utub_tag_id=-3
